# flair

./: README.md  todo.txt
docs/implementation/merger/: implementation_plan.md  no_server.md  walkthrough.md
flair_cli/: README.md  main.py  pyproject.toml
flair_cli/cli/: add.py  auth.py  commit.py  diff.py  merge.py  metrics.py  params.py  pull.py  push.py  revert.py
flair_cli/cli/utils/: architecture.py  class_space.py  commit_signing.py  local_commits.py
flair_cli/core/: session.py  shared_folder.py  ssh.py
flair_cli/docs/: ssh-integration.md
flair_cli/flair_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
flair_cli/tests/: test_commit_signing.py
merger/: Readme.md  app.py
repository_manager/: Readme.md
repository_manager/auth_frontend/: .env  .env.example  Readme.md
repository_manager/auth_frontend/src/: App.tsx  styles.css
repository_manager/auth_frontend/src/lib/auth/: google.ts
repository_manager/auth_frontend/src/lib/requests/: index.ts
repository_manager/auth_frontend/src/pages/: Auth.tsx  GoogleAuth.tsx
repository_manager/backend/: .env.example  pnpm-lock.yaml
repository_manager/backend/prisma/: schema.prisma
repository_manager/backend/prismav7_migration/: schema.prisma.txt
repository_manager/backend/src/controllers/: auth.controller.ts  commit.controller.ts  repo.controller.ts  user.controller.ts
repository_manager/backend/src/lib/nft/: metadata.ts  umi.ts
repository_manager/backend/src/routes/: auth.ts  commit.ts  commit.ts.backup  repo.ts  tree.ts  user.ts
(+12 files in other folders)
