[project]
name = "flair-cli"
version = "0.1.0"
description = "Flair CLI — record-only model repository and commit ledger for ML model evolution"
authors = [ { name = "Flair Contributors" } ]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

[project.scripts]
flair = "flair_cli.main:app"

[tool.poetry]
name = "flair-cli"
version = "0.1.0"
description = "Flair CLI — record-only model repository and commit ledger for ML model evolution"
authors = [ "Flair Contributors" ]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
typer = "*"
rich = "*"
httpx = "^0.24"
pydantic = "*"
pyyaml = "^6.0"
numpy = "^1.26"
onnx = "^1.16"
tf2onnx = "^1.15"
tensorflow = "^2.15"
torch = "^2.2"
ezkl = ">=0.4.0"
PyNaCl = "^1.5"
base58 = "^2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"